--- a/Yeni/index.css
+++ b/Yeni/index.css
@@ -45,3 +45,23 @@ body {
 .hikaye2{
     border-radius: 2px;
 }
+.carousel{
+    margin-top: 60px;
+}
+.display-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 20px;
+}
+.box-model-example{
+    border:3px solid orange;
+    padding: 20px;
+    margin: 10px;
+   
+}
+.inner-box{
+    padding: 10px;
+    margin: 5px;
+    background-color: lightblue;
+    border: 2px solid orange;
+}
